# gen-ai-qa-04-14

./: .gitignore  README.md  alembic.ini  pyproject.toml
.github/agents/: alex.agent.md  principal-software-engineer.agent.md  software-engineer-agent-v1.agent.md
.github/prompts/: verify-implementation.prompt.md
app/: db.py  logging_config.py  main.py  startup.py
app/api/: account_routes.py  bank_routes.py  client_routes.py  dependencies.py  test_client_routes.py  transaction_routes.py
app/models/: __init__.py  account.py  client.py  schemas.py  test_models.py  transaction.py
app/repository/: account_repository.py  client_repository.py  test_account_repository.py  test_client_repository.py  test_transaction_repository.py  transaction_repository.py
app/services/: account_service.py  bank_service.py  client_service.py  test_account_service.py  test_bank_service.py  test_client_service.py  test_transaction_service.py  transaction_service.py
app/validator/: amount_validator.py  test_amount_validator.py
docs/HB-11/: analysis.prompt.md  developers.md  operations.md  testers.md  verification.prompt.md
docs/HB-9/: analysis-developers.md  analysis-testers.md  analysis.prompt.md
docs/bug-reporting/: report-helper.md
migrations/: env.py  script.py.mako
migrations/versions/: 0e37a076f9ee_add_transaction_table.py  __init__.py
resources/data/: default_accounts.sql  default_clients.sql
resources/static/: index.html
resources/web/: README.md  package-lock.json  package.json  vite.config.ts
resources/web/src/: main.tsx
resources/web/src/types/: client.ts
(+4 files in other folders)
