[project]
name = "happy-bank"
version = "0.0.1"
description = "Happy Bank is an educational project that can be used to explain and demonstrate various concepts and approaches relevant to different roles in software development."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"alembic",
	"fastapi",
	"fastmcp",
	"pydantic",
	"pytest",
	"ruff",
	"repository_sqlalchemy",
	"sqlalchemy",
	"sqlmodel",
	"uvicorn"
]

[tool.ruff]
target-version = "py310"
line-length = 88
lint.select = ["E", "F", "W", "I", "B", "UP"]
lint.ignore = ["E501"]

[tool.setuptools]
package-dir = {"" = "app"}